fixed some overflow issues.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
 @import url("style/animations.css");
 @import url("style/base-layout.css");
 @import url("style/layout.css");
+
+::-webkit-scrollbar {
+  border-radius: 100%;
+  color: green;
+}
